[project]
name = "ThisPersonDoesNotExistAPI"
version = "1.0.0"
description = "Unofficial API for the ThisPersonDoesNotExist website."
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE.md" }
authors = [
    { name = "David Lorenzo"},
    ]
urls = { "Homepage" = "https://github.com/David-Lor/ThisPersonDoesNotExistAPI"}
dependencies = [
    "loguru>=0.7.3",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "ruff>=0.11.12",
    "ty>=0.0.1a7",
]

[tool.ruff.lint]
extend-select = ["I"]